<?xml version="1.0"?>
<package format="2">
  <name>rosneuro_cybathlon</name>
  <version>0.0.0</version>
  <description>ROSNEURO cybathlon to communicate with bci race</description>
  <author email="stefano.tortora@phd.unipd.it">Stefano Tortora</author>
  <maintainer email="stefano.tortora@phd.unipd.it">Stefano Tortora</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>rosneuro_msgs</depend>

</package>
